[package]
name = "hatter"
version = "0.0.2"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"
license = "MIT"
description = "positively mad, zero dependency html templating language"
repository = "https://github.com/xvxx/hatter"
exclude = [
    "img/*"
]

[profile.release]
# Optimize for build speed, for now.
lto = false
codegen-units = 16
opt-level = 0

[features]
repl = ["rustyline"]

[dependencies]
rustyline = { version = "6.2.0", optional = true }
