[package]
name = "hatter"
description = "positively mad, zero dependency html templating language"
homepage = "https://hatter.rs"
repository = "https://github.com/xvxx/hatter"
version = "0.1.0"
authors = ["chris west <c@xvxx.io>"]
documentation = "https://docs.rs/hatter/"
edition = "2018"
license = "MIT/Apache-2.0"
exclude = [
    "examples/*",
    "tests/*",
    "img/*"
]

[profile.release]
# Optimize for build speed, for now.
lto = false
codegen-units = 16
opt-level = 0

# Change v1.4.1 -> v1.4.2 in README on `cargo release`
[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="\\d+\\.\\d+\\.\\d+-dev", replace="{{version}}"},
]
dev-version-ext = "dev"

[features]
repl = ["rustyline"]

[dependencies]
rustyline = { version = "6.2.0", optional = true }
